working; issue when width is under 1025--leaves a gap on the right side of the screen. Will attempt to fix

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -1,7 +1,10 @@
 $blue-green: #3EB69F
 $orange: #F9A22D
 $drk-orange: #EB6828
+$blue: #6692B4
 
+#hidden
+  display: none
 
 #video
   position: relative
@@ -24,7 +27,7 @@ $drk-orange: #EB6828
     background:
       image: url(./abcd.jpg) no-repeat
       size: cover
-    z-index: -1
+    z-index: -10
   .top-links
     margin-top: 1em
   #hero-container
@@ -38,7 +41,7 @@ $drk-orange: #EB6828
     border: solid white 2px
     padding: 1.1em 0
     background-color: transparent
-    box-shadow: 0px 0px 15px 2px $orange
+    box-shadow: 0px 0px 15px 2px $drk-orange
     img
       position: relative
       width: 6vw
@@ -63,11 +66,11 @@ $drk-orange: #EB6828
       &:hover
         transform: scale(1.3)
   .hero-content
-    position: relative
+    position: absolute
     z-index: 2
     color: white
     font-family: 'Alegreya Sans SC', sans-serif
-    top: 17vh
+    top: 33vh
     h1
       font-size: 4em
     .fa
@@ -76,14 +79,35 @@ $drk-orange: #EB6828
 #content-container
   background-color: white
   padding: 0
-  .title
-    font-size: 1.2em
-    color: gray
-    text-transform: uppercase
+  color: $blue
   .tile
     min-height: 17em
-    border: black 1px solid
+    font-family: 'Oxygen', sans-serif
+  #projects
+    background-color: $orange
   #services
     margin: 0
-    background-color: $drk-orange
+    background-color: $blue-green
     color: white
+  .end-content
+    position: relative
+    z-index: 3
+    .title
+      position: absolute
+      top: 45%
+      transform: translateY(-50%)
+      font-size: 7em
+      color: transparentize(gray, .75)
+      text-transform: uppercase
+      padding: .2em
+      margin: 0
+      z-index: -1
+    p
+      position: relative
+      padding: 3em 2em
+      font-size: 1.1em
+    #contactForm
+      position: relative
+      z-index: 3
+    .form-control
+      background-color: transparent
